# nearai

./: .codespellrc  .dockerignore  .env_example  .gitignore  .gitmodules  .pylintrc  404.html  AGENT_ARCHITECTURE.md  ARCHITECTURE.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  agent_quickstart.sh  codespell_ignore.txt  docker-compose.yaml  docs.css  example_agent.py.txt  index.html  install.sh  mkdocs.yaml  objects.inv  package-lock.json  pyproject.toml  setup_and_run.sh  sitemap.xml
.devcontainer/: Dockerfile.cpu.dev  Dockerfile.gpu.dev  compose.yml  devcontainer.json
.docker/: Dockerfile.agent_runner  Dockerfile.ci  Dockerfile.cpu.dev  Dockerfile.gpu.dev  Dockerfile.hub  Dockerfile.nearai_base  Dockerfile.scheduler  Dockerfile.singlestore  Dockerfile.tinyproxy  Dockerfile.vllm.cpu  Dockerfile.worker  compose-ci.yml  compose-e2e.yml  compose-worker.yml  compose.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  new-doc.yml  new-feature.yml
.github/workflows/: ci.yml  docs-preview.yml  frontend-ci.yml  release.yml  spellcheck.yml  stale.yml
agent_triggers/: index.html
agents/: index.html
agents/quickstart/: index.html
agents/registry/: index.html
agents/running/: index.html
agents/secrets/: index.html
agents/threads/: index.html
api/: index.html
assistants/integrate/: index.html
assistants/overview/: index.html
aws_runner/: .dockerignore  .generate_client.sh.un~  Dockerfile  LOCAL_TESTING.md  README.md  deploy.sh  generate_client.sh  partial_near_client.py  requirements.txt  service.py
aws_runner/agents/: agent.py  completion.py  environment.py  near.py
aws_runner/frameworks/: requirements-agentkit.txt  requirements-base.txt  requirements-langgraph-0-1-4.txt  requirements-langgraph-0-2-26.txt  requirements-langgraph-1-4.txt  requirements-langgraph.txt  requirements-masa.txt  requirements-minimal.txt  requirements-standard.txt  requirements-ts.txt  requirements-web-agent.txt
aws_runner/local_runners/: README.md  docker-compose.yml
aws_runner/openapi_client/: README.md  __init__.py  api_client.py  configuration.py  exceptions.py  near-openapi.json  rest.py
aws_runner/py_runner/: .dockerignore  Dockerfile
aws_runner/runner/: agent.py  environment.py
aws_runner/ts_runner/: .dockerignore  Dockerfile
benchmarking/: index.html
benchmarks_and_evaluations/: index.html
ci/: test_ci.py
contributing/: index.html
decentralization/: index.html
docs/: agent_quickstart.sh  agent_triggers.md  agents.md  api.md  benchmarking.md  benchmarks_and_evaluations.md  cli.md  cli_command_reference.md  contributing.md  decentralization.md  docs.css  example_agent.py.txt  fine_tuning.md  hub_secrets.md  index.md  inference.md  login.md  near_events.md  private-ml-sdk.md  submit.md  vector-stores.md
docs/agents/: environment.md  integration.md  quickstart.md  registry.md  running.md  secrets.md  streaming.md  threads.md  vector-stores.md
docs/api/: guide.md
docs/assistants/: integrate.md  overview.md
docs/examples/: agent_example_metadata.json  example_agent.py
docs/integration/: overview.md  quickstart.md
docs/models/: benchmarks_and_evaluations.md  fine_tuning.md  home.md
e2e/: test_ci.py
etc/: hosts_lambda.txt  install_cli.sh  server.service  setup_host.sh  setup_supervisor.sh  start_server.sh  start_supervisor.sh  supervisor.service
etc/finetune/: llama3-70b.yml  llama3-8b.yml
examples/: agent_example_metadata.json  finetune.py  from_math_ds_to_training_json.py  inference.py  inference_server.py  megatron_evaluation.sh  megatron_gpt2_one_machine_finetune.sh  megatron_gpt2_one_machine_train.sh  megatron_inference_server.sh  prepare_contract_data.py  prepare_data.py  preprocess_data_for_gpt2.py  simple_task.py
fine_tuning/: index.html
hub/: .env.example  Makefile  NGINX_CONFIG.md  README.md  alembic.ini  app.py  install.sh  install_service.sh  run.py  run.sh  scheduler.py  setup_env.sh  start.sh
hub/alembic/: env.py  script.py.mako
hub/demo/: .env.example  .eslintrc.cjs  .prettierignore  .prettierrc.mjs  README.md  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  svgr.d.ts  tsconfig.json
hub/examples/: agents.py  chat_openai_client.py  image_generation.py  openai_client.py  streaming_agents.py  streaming_completion.py  user_memory.py  vector_store.py  vector_store_build_doc.py  vector_store_from_source.py
hub/migrations/: 20240604133844_init.sql  20240723113330_challenge.sql  20240723113330_nonce.sql
hub/service/: nearai-hub.service
hub/tasks/: embedding_generation.py  github_import.py  near_events.py  schedule.py  scheduler.py  triggers.py  twitter_client.py  (+1 more)
hub_secrets/: index.html
inference/: index.html
jasnah/: __main__.py  agent.py  benchmark.py  cli.py  completion.py  config.py  dataset.py  db.py  environment.py  finetune.py  inference.py  lib.py  model.py  registry.py  server.py  server_app.py  solvers.py  streamlit_inspect.py  supervisor.py  supervisor_client.py  tensorboard_feed.py
login/: index.html
near_events/: index.html
nearai/: __main__.py  agent.py  agent_creator.py  banners.py  benchmark.py  cli.py  cli_help.py  cli_helpers.py  completion.py  config.py  dataset.py  db.py  delegation.py  environment.py  evaluation.py  hub.py  jobs.py  lib.py  local_agent.py  local_environment.py  log.py  login.py  model.py  naming.py  provider_models.py  registry.py  server.py  streamlit_inspect.py  supervisor.py  tensorboard_feed.py  tool_registry.py
openapi_client/: __init__.py  api_client.py  configuration.py
scripts/: build_mkdocs.sh  format_check.sh  generate_client.sh  lint_check.sh  lint_format.sh  near-openapi.json  test.sh  type_check.sh  typecheck.sh
search/: search_index.json
shared/: auth_data.py  cache.py  client_config.py  inference_client.py  models.py  naming.py  partial_near_client.py  provider_models.py
shirt_agent/: agent.py  create_order.py  find_store_id.py  get_products_list.py  get_sync_variants.py  jwt_token.py  product_directory.txt
vector-stores/: index.html
worker/: __main__.py
(+738 files in other folders)
